--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -10,13 +10,16 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-                            <android.support.design.widget.FloatingActionButton
-                                android:id="@+id/sendNote"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                app:fabSize="normal"
-                                app:borderWidth="0dp"
-                                android:src="@drawable/send"/>
+                    <android.support.design.widget.FloatingActionButton
+                        android:id="@+id/sendNote"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:src="@drawable/plus"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignRight="@+id/layoutEt"
+                        android:layout_alignEnd="@+id/layoutEt"
+                        android:layout_marginBottom="55dp" />
                 </RelativeLayout>
 
 
